se agrego vista de notificaciones pero no es funcional

--- a/fiexpress/wwwroot/index.html
+++ b/fiexpress/wwwroot/index.html
@@ -225,7 +225,11 @@
                 <a href="#" data-form="permisos" data-title="Permisos">
                     <i class="bi bi-file-text"></i> Permisos
                 </a>
-            
+                <a href="#" data-form="notificaciones-admin" data-title="Notificaciones">
+                    <i class="bi bi-bell"></i> Notificaciones
+                </a>
+
+
                 <hr>
                 <a href="#" data-form="usuarios" data-title="Usuarios" class="admin-only">
                     <i class="bi bi-people"></i> Usuarios
