--- a/fiexpress/wwwroot/panel-empleado.html
+++ b/fiexpress/wwwroot/panel-empleado.html
@@ -196,7 +196,7 @@
                 <a href="#" data-form="estadisticas-personales" data-title="Estadísticas">
                     <i class="bi bi-graph-up"></i> Estadísticas
                 </a>
-                <a href="#" data-form="notificaciones" data-title="Notificaciones">
+                <a href="#" data-form="notificaciones-empleado" data-title="Notificaciones">
                     <i class="bi bi-bell"></i> Notificaciones
                 </a>
                 <a href="#" data-form="permisos-empleado" data-title="Permisos">
