--- a/fiexpress/wwwroot/index.html
+++ b/fiexpress/wwwroot/index.html
@@ -18,6 +18,7 @@
             --accent-color: #3498db;
             --hover-color: #3a506b;
             --text-light: #ecf0f1;
+    
             --text-muted: #bdc3c7;
             --transition-speed: 0.3s;
             --border-radius: 12px;
@@ -30,11 +31,18 @@
             box-sizing: border-box;
         }
 
+        /*         background: linear-gradient(135deg, #e6e9f0 0%, #eef1f5 100%);*/
+
+
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background: linear-gradient(135deg, #e6e9f0 0%, #eef1f5 100%);
+            background: url(img/image.jpg);
+            background-position: center;
+            background-size: cover;
+            background-attachment: fixed;
             min-height: 100vh;
             overflow-x: hidden;
+
         }
 
         /* ===== SIDEBAR MEJORADO ===== */
@@ -64,12 +72,11 @@
             border-bottom: 1px solid rgba(255, 255, 255, 0.1);
             background: rgba(0, 0, 0, 0.1);
             position: relative;
-
         }
 
         .logo-container {
             display: flex;
-            justify-content:center;
+            justify-content: center;
             align-items: center;
             gap: 12px;
             transition: all var(--transition-speed);
